打包桌面端应用

--- a/.trae/documents/小型超市商品价格管理系统_技术架构文档.md
+++ b/.trae/documents/小型超市商品价格管理系统_技术架构文档.md
@@ -393,8 +393,8 @@ const productService = {
       const newProduct = {
         ...product,
         id: Date.now().toString(), // 生成唯一ID
-        createdAt: now.toISOString(),
-        updatedAt: now.toISOString()
+        createdAt: now.toLocaleString(),
+        updatedAt: now.toLocaleString()
       };
       
       await productsStore.setItem(newProduct.id, newProduct);
@@ -416,7 +416,7 @@ const productService = {
       const updatedProduct = {
         ...existingProduct,
         ...productData,
-        updatedAt: new Date().toISOString()
+        updatedAt: new Date().toLocaleString()
       };
       
       await productsStore.setItem(id, updatedProduct);
@@ -451,7 +451,7 @@ const orderService = {
       const order = {
         id: orderId,
         totalAmount: orderData.totalAmount,
-        createdAt: now.toISOString(),
+        createdAt: now.toLocaleString(),
         status: 'completed'
       };
       
